--- a/TodoList-Serratec/index.html
+++ b/TodoList-Serratec/index.html
@@ -18,7 +18,7 @@
 
         <div class="todo__new-item" id="newItem">
             <div>&and;</div>
-            <input type="text" placeholder="Digite e pressione enter para adicionar a tarefa">
+            <input type="text" placeholder="Digite a tarefa que deseja adicionar">
             <div>&and;</div>
         </div>
     </div>
